--- a/index.css
+++ b/index.css
@@ -3,31 +3,59 @@
     text-decoration: none;
     margin:0;
     padding: 0;
+    border:1px solid red;
+    max-width: 100%;
+}
+body {
+font-family: Arial, Helvetica, sans-serif;
 }
 header {
     background: lightslategray;
-    width: 100%;
+    
+}
+.myname {
+    font-size: 3rem;
+    padding:1rem;
+    display:flex;
+    align-items: center;
+    justify-content: flex-start;
+    transition: .3
+}
+.navbar {
+    width: 100px;
+    height: 50px;
+    margin-right:10px;
+    padding-left:30px;   
+}
+a:hover{
+    background: rgb(216, 216, 39);
+    color: black;
+    cursor: pointer;
+}
 
-}
-.home {
-    background: black;
-    color:white;
-    height:10px;
-    width:10px
-}
-.main {
-   
-}
 .image {
     box-sizing: border-box;
     display: flex;
     justify-content: flex-start;
-
+    align-items: center;
+    padding: 10px;
 }
 .project{
     width:6rem;
     height:1.5rem;
     border-radius: 10px;
     margin-left: 3rem;
-
+    margin-right: 3rem;
+    display: flex;
+    justify-content: center;
+}
+.main-pics {
+    display: flex;
+    justify-content: space-evenly;
+    flex-flow:wrap;
+}
+.name {
+    display: flex;
+    justify-content: center;
+    font-size: 3rem;
 }
