--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
     text-decoration: none;
     margin:0;
     padding: 0;
-    border:1px solid red;
+    /* border:1px solid red; */
     max-width: 100%;
 }
 body {
@@ -28,19 +28,52 @@ header {
     padding-left:30px;   
 }
 a:hover{
-    background: rgb(216, 216, 39);
-    color: black;
+    background: rgb(20, 23, 212);
+    color: white;
     cursor: pointer;
 }
 
-.image {
-    box-sizing: border-box;
+.container {
+    display: flex;
+    flex-flow:row wrap;
+    justify-content:space-evenly;
+    align-content:space-evenly;
+    text-align:center;
+    padding-top: 2%;
+
+    /* box-sizing: border-box;
     display: flex;
     justify-content: flex-start;
     align-items: center;
     padding: 10px;
+    width: 300px;
+    height: 300px;; */
 }
-.project{
+.image{
+  display:flex;
+  justify-content: flex-start;
+}
+.name {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-content: flex-end;
+    padding:5%;
+    text-align: left;
+    width: 50%;
+}
+h1 {
+    text-align: center;
+}
+.projectButton{
+    text-align:center;
+    width:10rem;
+    margin-left: 17rem;
+    border: 10px solid blue;
+    background: lightgray;
+
+}
+/* .button{
     width:6rem;
     height:1.5rem;
     border-radius: 10px;
@@ -48,14 +81,23 @@ a:hover{
     margin-right: 3rem;
     display: flex;
     justify-content: center;
+} */
+
+/* .name {
+    width: 20rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    font-size: 3rem; */
+    
+    /* padding-top: 0;
+    margin-top: 0; */
 }
 .main-pics {
     display: flex;
     justify-content: space-evenly;
-    flex-flow:wrap;
-}
-.name {
-    display: flex;
-    justify-content: center;
-    font-size: 3rem;
+    flex-flow:row wrap;
+    width:60%;
+    margin-left: 18%;
 }
