--- a/index.css
+++ b/index.css
@@ -25,11 +25,13 @@ header {
     width: 100px;
     height: 50px;
     margin-right:10px;
-    padding-left:30px;   
+    padding:15px 30px; 
+    font-size: 20px;
+    color:white;
 }
 a:hover{
-    background: rgb(20, 23, 212);
-    color: white;
+    background: white;
+    color:rgb(20, 23, 212);
     cursor: pointer;
 }
 
@@ -40,20 +42,12 @@ a:hover{
     align-content:space-evenly;
     text-align:center;
     padding-top: 2%;
-
-    /* box-sizing: border-box;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    padding: 10px;
-    width: 300px;
-    height: 300px;; */
 }
 .image{
   display:flex;
   justify-content: flex-start;
 }
-.name {
+.item {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -65,39 +59,50 @@ a:hover{
 h1 {
     text-align: center;
 }
+.item p {
+    width:30rem;
+    text-align: center;
+    margin-top: 3rem;
+    margin-left: 8rem;
+}
 .projectButton{
     text-align:center;
     width:10rem;
     margin-left: 17rem;
     border: 10px solid blue;
     background: lightgray;
-
+    margin-top:2rem;
 }
-/* .button{
-    width:6rem;
-    height:1.5rem;
-    border-radius: 10px;
-    margin-left: 3rem;
-    margin-right: 3rem;
-    display: flex;
-    justify-content: center;
-} */
 
-/* .name {
-    width: 20rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100px;
-    font-size: 3rem; */
-    
-    /* padding-top: 0;
-    margin-top: 0; */
-}
 .main-pics {
     display: flex;
     justify-content: space-evenly;
     flex-flow:row wrap;
-    width:60%;
-    margin-left: 18%;
+    /* margin-left: 18%; */
+    width: 60%;
+    margin-top: 5rem;
+}
+footer {
+    background: lightslategray;
+    height:5rem;
+    margin-top:5rem;
+}
+/* .firs-project p {
+    need to move the text to put it in the bottom 
+    of the pictures text-align:justify;
+} */
+footer div {
+    margin-left: 40rem;
+    font-size: 25px;
+}
+.bottom {
+font-size: 20px;
+width:10%;
+margin-top: 1rem;
+margin-left:40rem;
+}
+button {
+    font-size:20px;
+    color: black;
+
 }
